2002-05-19  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/compiler/ucparse.yy,etc:  Added 'converse2' syntax for
	easier conversations.
	* content/islefaq/usecode.uc:  Converted some of the conversations
	to the new syntax, and added a bit more plot after Amy has joined.

2002-05-19  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/*.html : updated
	* docs/exult_studio.txt : updated
	* docs/xml/*.xml : updated
	* readme, faq : updated

2002-05-17  Tristan Tarrant  <nadir@users.sf.net>
	* schedule.cc: #include "SDL_timer.h" to appease gcc

2002-05-16  Ryan Nunn  <triforce@merlin.net.au>
	* files/listfiles.cc, files/utils.cc : Fixing up Win32 U7ListFiles().

2002-05-16  Simon Quinn <email@simonquinn.co.uk>
	* gamewin.cc: fix nighttime SFX

2002-05-15  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/contain.cc (Container_game_object): Auto-add keys to SI
	keyring.  Also ignore frame when combining some items (coins,
	arrows, etc.)

2002-05-14  Ryan Nunn  <triforce@merlin.net.au>
	* cheat.*, gamerend.cc, objs/objs.h : Fixing Namespace, and forcing int
	  to bool problems.
	* gumps/Face_stats.cc : Fixed old problem with stat bars not being
	  clamped if a stat was larger than the max.

2002-05-13  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: In rewriting with the 'combine' flag, I also changed
	all uses of drop() with add(), since drop() can potentially delete
	the object being added.

	* objs/contain.cc,etc:  ::add() takes a new parameter, 'combine',
	which means it should try to combine quantity items.  Also,
	replaced 'int' flags with 'bool'.

	* animat.cc,etc:  Simon Quinn's SFX patches applied.

	* schedule.cc:  Added Follow_avatar_schedule, and moved some of
	the party logic here.
	* actors.cc:  Moved some logic out, to schedule.cc.

2002-05-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/studio.cc: catch usecode debugging messages
	* shapes/shapeinf.cc: memory leak
	
2002-05-11  Jeff Freedman  <jeff@amy.nerble.net>
