@@ -1,5 +1,8 @@
 2002-05-19  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* mapedit/combo.cc (Combo): Added a "Save combos" option.  Also
+	fixed a crash in Combo::read().
+
 	* usecode/compiler/ucparse.yy,etc:  Added 'converse2' syntax for
 	easier conversations.
 	* content/islefaq/usecode.uc:  Converted some of the conversations
